--- a/login/styles/login.css
+++ b/login/styles/login.css
@@ -96,15 +96,16 @@ header .header_inner nav .gnb {
   box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
   transition: opacity 0.4s;
 }
-header .header_inner nav .gnb li > a {
+header .header_inner nav .gnb li {
   font-size: 1.6rem;
   color: #000;
   text-decoration: none;
   padding: 10px;
   display: block;
   transition: color 0.4s;
+  cursor: pointer;
 }
-header .header_inner nav .gnb li > a:hover {
+header .header_inner nav .gnb li:hover {
   color: #f37100;
 }
 header .header_inner nav .gnb.active {
@@ -286,7 +287,7 @@ footer .footer_inner .up_btn {
   opacity: 0;
   transition: opacity 0.4s;
 }
-footer .footer_inner .up_btn a div {
+footer .footer_inner .up_btn div {
   width: 100%;
   height: 100%;
   display: flex;
@@ -295,7 +296,7 @@ footer .footer_inner .up_btn a div {
   background: #ffc164;
   border-radius: 27px;
 }
-footer .footer_inner .up_btn a div i {
+footer .footer_inner .up_btn div i {
   font-size: 2rem;
   color: #fff;
 }
