--- a/style.scss
+++ b/style.scss
@@ -28,146 +28,22 @@ main {
   gap: 100px;
   justify-content: center;
   margin: 0 auto;
-  #tttt {
-    width: 100%;
-    height: 100vh;
-    background: #ff0;
-  }
-  #main_con1 {
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    margin-top: 120px;
-    .main_inner {
-      width: 100%;
-      max-width: 1050px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      h1 {
-        font-size: 2.6rem;
-      }
-      .main_it {
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 30px; // 간격을 주는 게 더 보기 좋아요
-        .main_type1,
-        .main_type2 {
-          display: flex;
-          flex-direction: column;
-          width: 100%;
-          height: 100%;
-          // padding: 10px;
-          box-sizing: border-box;
-          gap: 15px;
 
-          .img {
-            position: relative;
-            width: 100%;
-            img {
-              width: 100%;
-              aspect-ratio: 1 / 1; // 정사각형 비율 유지
-              object-fit: cover;
-              cursor: pointer;
-            }
-            // 할인 버튼은 type2에서만 존재
-            button {
-              position: absolute;
-              top: 5%;
-              left: 5%;
-              @include button;
-            }
-          }
-          .main_info {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            height: 100%;
-            gap: 10px;
-            h3,
-            .main_title {
-              font-size: 1.8rem;
-              display: -webkit-box;
-              -webkit-line-clamp: 1; // 원하는 줄 수
-              -webkit-box-orient: vertical;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              // font-size: 1.8rem;
-              cursor: pointer;
-            }
-            .main_shopping,
-            .main_tag {
-              display: flex;
-              justify-content: space-between;
-              align-items: flex-end;
-              p {
-                font-weight: 600;
-                font-size: 2.2rem;
-              }
-              .main_sale {
-                display: flex;
-                gap: 10px;
-                align-items: flex-end;
-
-                .main_percent {
-                  p {
-                    font-size: 1.8rem;
-                    color: map-get($map: $color, $key: main-01);
-                    b {
-                      font-size: 3.6rem;
-                    }
-                  }
-                }
-
-                .main_price {
-                  display: flex;
-                  flex-direction: column;
-                  span {
-                    font-size: 1.6rem;
-                    color: map-get($map: $color, $key: gray-ccc);
-                    text-decoration: line-through;
-                  }
-                  p {
-                    font-weight: 600;
-                    font-size: 2.2rem;
-                    color: map-get($map: $color, $key: dark);
-                  }
-                }
-              }
-              .icon {
-                display: flex;
-                gap: 5px;
-                .fa-heart,
-                .fa-cart-shopping {
-                  @include icon;
-                  cursor: pointer;
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
   .main_banner {
     width: 100%;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
+    height: 360px;
     position: relative;
     .main_innerbanner1 {
       width: 100%;
+      height: 100%;
       position: relative;
       img {
         width: 100%;
         object-fit: cover;
       }
       .banner_text {
-        // width: 1050px;
+        margin-left: 10vw;
         width: 100%;
-        max-width: 1050px;
         display: flex;
         justify-content: center;
         position: absolute;
@@ -181,11 +57,11 @@ main {
           flex-direction: column;
           gap: 10px;
           span {
-            width: 17%;
+            width: 200px;
             background: #ff4726;
             color: map-get($map: $color, $key: light);
             border-radius: 30px;
-            padding: 10px;
+            padding: 5px;
             display: flex;
             justify-content: center;
           }
@@ -204,8 +80,9 @@ main {
         }
         .banner_text1 {
           p {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
             color: map-get($map: $color, $key: dark-424242);
+            line-height: 150%;
           }
         }
       }
@@ -317,12 +194,132 @@ main {
       }
     }
   }
+
+  #main_con1 {
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    .main_inner {
+      width: 100%;
+      max-width: 1050px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      h1 {
+        font-size: 2.6rem;
+      }
+      .main_it {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 30px; // 간격을 주는 게 더 보기 좋아요
+        .main_type1,
+        .main_type2 {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          height: 100%;
+          // padding: 10px;
+          box-sizing: border-box;
+          gap: 15px;
+
+          .img {
+            position: relative;
+            width: 100%;
+            img {
+              width: 100%;
+              aspect-ratio: 1 / 1; // 정사각형 비율 유지
+              object-fit: cover;
+              cursor: pointer;
+            }
+            // 할인 버튼은 type2에서만 존재
+            button {
+              position: absolute;
+              top: 5%;
+              left: 5%;
+              @include button;
+            }
+          }
+          .main_info {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+            gap: 10px;
+            h3,
+            .main_title {
+              font-size: 1.8rem;
+              display: -webkit-box;
+              -webkit-line-clamp: 1; // 원하는 줄 수
+              -webkit-box-orient: vertical;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              // font-size: 1.8rem;
+              cursor: pointer;
+            }
+            .main_shopping,
+            .main_tag {
+              display: flex;
+              justify-content: space-between;
+              align-items: flex-end;
+              p {
+                font-weight: 600;
+                font-size: 2.2rem;
+              }
+              .main_sale {
+                display: flex;
+                gap: 10px;
+                align-items: flex-end;
+
+                .main_percent {
+                  p {
+                    font-size: 1.8rem;
+                    color: map-get($map: $color, $key: main-01);
+                    b {
+                      font-size: 3.6rem;
+                      font-weight: 800;
+                    }
+                  }
+                }
+
+                .main_price {
+                  display: flex;
+                  flex-direction: column;
+                  span {
+                    font-size: 1.6rem;
+                    color: map-get($map: $color, $key: gray-ccc);
+                    text-decoration: line-through;
+                  }
+                  p {
+                    font-weight: 600;
+                    font-size: 2.2rem;
+                    color: map-get($map: $color, $key: dark);
+                  }
+                }
+              }
+              .icon {
+                display: flex;
+                gap: 5px;
+                .fa-heart,
+                .fa-cart-shopping {
+                  @include icon;
+                  cursor: pointer;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   #main_con2 {
     width: 100%;
     height: auto;
     display: flex;
     justify-content: center;
-    // margin-top: 120px;
+    margin-top: 120px;
     .main_inner {
       width: 100%;
       max-width: 1050px;
