--- a/style.scss
+++ b/style.scss
@@ -33,163 +33,166 @@ main {
     width: 100%;
     height: 360px;
     position: relative;
-    .main_innerbanner1 {
-      width: 100%;
+    .slick-list {
       height: 100%;
-      position: relative;
-      img {
+      .main_innerbanner1 {
         width: 100%;
-        object-fit: cover;
-      }
-      .banner_text {
-        margin-left: 10vw;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        flex-direction: column;
-        gap: 40px;
-        .banner_tag {
+        height: 100%;
+        position: relative;
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
+        .banner_text {
+          margin-left: 10vw;
+          width: 100%;
           display: flex;
+          justify-content: center;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
           flex-direction: column;
-          gap: 10px;
-          span {
-            width: 200px;
-            background: #ff4726;
-            color: map-get($map: $color, $key: light);
-            border-radius: 30px;
-            padding: 5px;
-            display: flex;
-            justify-content: center;
-          }
-          .banner_title {
+          gap: 40px;
+          .banner_tag {
             display: flex;
             flex-direction: column;
-            gap: 6px;
-            h2 {
-              font-size: 4rem;
+            gap: 10px;
+            span {
+              width: 200px;
+              background: #ff4726;
+              color: map-get($map: $color, $key: light);
+              border-radius: 30px;
+              padding: 5px;
+              display: flex;
+              justify-content: center;
             }
+            .banner_title {
+              display: flex;
+              flex-direction: column;
+              gap: 6px;
+              h2 {
+                font-size: 4rem;
+              }
+              p {
+                font-size: 1.6rem;
+                color: map-get($map: $color, $key: dark-424242);
+              }
+            }
+          }
+          .banner_text1 {
             p {
               font-size: 1.6rem;
               color: map-get($map: $color, $key: dark-424242);
+              line-height: 150%;
             }
           }
         }
-        .banner_text1 {
+      }
+      .main_innerbanner2 {
+        width: 100%;
+        position: relative;
+        img {
+          width: 100%;
+          object-fit: cover;
+        }
+        .banner2_text {
+          padding: 0 50px;
+          width: 100%;
+          max-width: 1050px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+          span {
+            font-size: 2.6rem;
+          }
+          h2 {
+            font-size: 4rem;
+            b {
+              color: map-get($map: $color, $key: main-01);
+            }
+          }
           p {
             font-size: 1.6rem;
-            color: map-get($map: $color, $key: dark-424242);
-            line-height: 150%;
-          }
-        }
-      }
-    }
-    .main_innerbanner2 {
-      width: 100%;
-      position: relative;
-      img {
-        width: 100%;
-        object-fit: cover;
-      }
-      .banner2_text {
-        padding: 0 50px;
-        width: 100%;
-        max-width: 1050px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        span {
-          font-size: 2.6rem;
-        }
-        h2 {
-          font-size: 4rem;
-          b {
             color: map-get($map: $color, $key: main-01);
           }
         }
-        p {
-          font-size: 1.6rem;
-          color: map-get($map: $color, $key: main-01);
+      }
+      .main_innerbanner3 {
+        width: 100%;
+        position: relative;
+        img {
+          width: 100%;
+          object-fit: cover;
         }
-      }
-    }
-    .main_innerbanner3 {
-      width: 100%;
-      position: relative;
-      img {
-        width: 100%;
-        object-fit: cover;
-      }
-      .banner3_text {
-        width: 100%;
-        max-width: 1050px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        p {
-          font-size: 2rem;
-          b {
-            color: map-get($map: $color, $key: main-01);
+        .banner3_text {
+          width: 100%;
+          max-width: 1050px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          p {
+            font-size: 2rem;
+            b {
+              color: map-get($map: $color, $key: main-01);
+            }
+          }
+          h2 {
+            font-size: 5rem;
           }
         }
-        h2 {
-          font-size: 5rem;
-        }
       }
-    }
-    .main_innerbanner4 {
-      width: 100%;
-      position: relative;
-      color: map-get($map: $color, $key: light);
-      img {
+      .main_innerbanner4 {
         width: 100%;
-        object-fit: cover;
-      }
-      .banner4_text {
-        width: 100%;
-        max-width: 1050px;
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        top: 55%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        gap: 5px;
-        p {
-          font-size: 1.4rem;
-          font-weight: lighter;
+        position: relative;
+        color: map-get($map: $color, $key: light);
+        img {
+          width: 100%;
+          object-fit: cover;
         }
-        span {
-          font-size: 3rem;
-        }
-        h2 {
-          font-size: 4rem;
-          b {
-            // background-image: linear-gradient(
-            //   90deg,
-            //   rgba(151, 210, 118, 1) 0%,
-            //   rgba(110, 171, 77, 1) 100%
-            // );
-            color: rgba(110, 171, 77, 1);
-          }
-        }
-        .banner_time {
-          margin-top: 10px;
-          width: 16%;
+        .banner4_text {
+          width: 100%;
+          max-width: 1050px;
           display: flex;
-          justify-content: center;
-          font-size: 2rem;
-          background: map-get($map: $color, $key: dark);
-          border-radius: 20px;
-          padding: 10px;
+          flex-direction: column;
+          position: absolute;
+          top: 55%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          gap: 5px;
+          p {
+            font-size: 1.4rem;
+            font-weight: lighter;
+          }
+          span {
+            font-size: 3rem;
+          }
+          h2 {
+            font-size: 4rem;
+            b {
+              // background-image: linear-gradient(
+              //   90deg,
+              //   rgba(151, 210, 118, 1) 0%,
+              //   rgba(110, 171, 77, 1) 100%
+              // );
+              color: rgba(110, 171, 77, 1);
+            }
+          }
+          .banner_time {
+            margin-top: 10px;
+            width: 16%;
+            display: flex;
+            justify-content: center;
+            font-size: 2rem;
+            background: map-get($map: $color, $key: dark);
+            border-radius: 20px;
+            padding: 10px;
+          }
         }
       }
     }
