--- a/login/styles/find.css
+++ b/login/styles/find.css
@@ -244,6 +244,7 @@ header .header_inner .header_inner_logo {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  cursor: pointer;
 }
 
 * {
