--- a/detail/styles/detail.scss
+++ b/detail/styles/detail.scss
@@ -15,6 +15,9 @@ body {
   font-family: map-get($map: $font, $key: pretendard);
   width: 100%;
   margin: 0px auto;
+  &.modal-open {
+    overflow: hidden;
+  }
 }
 
 /* Product Thumbnail */
@@ -555,7 +558,7 @@ body {
 /* modal */
 .modal_overlay {
   position: fixed;
-  top: 50px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
