--- a/detail/styles/res_detail.scss
+++ b/detail/styles/res_detail.scss
@@ -468,9 +468,9 @@
         color: map-get($map: $color, $key: dark);
         cursor: pointer;
 
-        &:first-child {
+        &.active {
           color: map-get($map: $color, $key: main-01);
-          font-weight: 600;
+          font-weight: 700;
           text-decoration: underline;
         }
       }
@@ -1055,9 +1055,9 @@
         color: map-get($map: $color, $key: dark);
         cursor: pointer;
 
-        &:first-child {
+        &.active {
           color: map-get($map: $color, $key: main-01);
-          font-weight: 600;
+          font-weight: 700;
           text-decoration: underline;
         }
       }
@@ -1667,9 +1667,9 @@
         color: map-get($map: $color, $key: dark);
         cursor: pointer;
 
-        &:first-child {
+        &.active {
           color: map-get($map: $color, $key: main-01);
-          font-weight: 500;
+          font-weight: 700;
           text-decoration: underline;
         }
       }
@@ -2289,9 +2289,9 @@
         color: map-get($map: $color, $key: dark);
         cursor: pointer;
 
-        &:first-child {
+        &.active {
           color: map-get($map: $color, $key: main-01);
-          font-weight: 500;
+          font-weight: 700;
           text-decoration: underline;
         }
       }
