--- a/detail/styles/detail.scss
+++ b/detail/styles/detail.scss
@@ -523,7 +523,7 @@ body {
     .faq_date {
       color: map-get($map: $color, $key: gray-858585);
     }
-    .faq_comple {
+    .faq_status {
       color: map-get($map: $color, $key: main-01);
       font-weight: 500;
     }
@@ -540,12 +540,6 @@ body {
       color: map-get($map: $color, $key: dark);
       cursor: pointer;
 
-      // &:first-child {
-      //   color: map-get($map: $color, $key: main-01);
-      //   font-weight: 700;
-      //   text-decoration: underline;
-      // }
-
       &.active {
         color: map-get($map: $color, $key: main-01);
         font-weight: 700;
@@ -556,9 +550,9 @@ body {
 }
 
 /* modal */
-.modal_overlay {
+.modal_container {
   position: fixed;
-  top: 0;
+  top: 50px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -568,10 +562,10 @@ body {
   justify-content: center;
   align-items: center;
 
-  .modal {
-    width: 500px;
+  .modal_contents {
+    width: 400px;
     background: map-get($map: $color, $key: light);
-    border-radius: 20px;
+    border-radius: 5px;
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -587,13 +581,23 @@ body {
         font-weight: 700;
       }
 
-      .modal_close {
+      .modal_close_btn {
         font-size: 2.4rem;
         cursor: pointer;
+        transition: color 0.3s;
+        &:hover {
+          color: map-get($map: $color, $key: gray-858585);
+        }
       }
     }
 
-    .modal_body {
+    .modal_user_info {
+      display: flex;
+      justify-content: space-between;
+      color: map-get($map: $color, $key: dark);
+    }
+
+    .modal_input {
       display: flex;
       flex-direction: column;
       gap: 10px;
@@ -601,14 +605,14 @@ body {
       input,
       textarea {
         padding: 10px;
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         border: 1px solid map-get($map: $color, $key: gray-ccc);
         border-radius: 8px;
         width: 100%;
       }
 
       textarea {
-        height: 100px;
+        height: 200px;
         resize: none;
       }
     }
@@ -625,6 +629,10 @@ body {
         border: none;
         border-radius: 10px;
         cursor: pointer;
+        transition: all 0.3s;
+        &:hover {
+          background: map-get($map: $color, $key: main-02);
+        }
       }
     }
   }
