--- a/style.scss
+++ b/style.scss
@@ -35,163 +35,180 @@ main {
     position: relative;
     .slick-list {
       height: 100%;
-      .main_innerbanner1 {
-        width: 100%;
+      .slick-track {
         height: 100%;
-        position: relative;
-        img {
+        .main_innerbanner1 {
           width: 100%;
-          object-fit: cover;
-        }
-        .banner_text {
-          margin-left: 10vw;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          flex-direction: column;
-          gap: 40px;
-          .banner_tag {
+          height: 100%;
+          position: relative;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+          }
+          .banner_text {
+            margin-left: 20vw;
+            width: 100%;
             display: flex;
+            justify-content: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             flex-direction: column;
-            gap: 10px;
-            span {
-              width: 200px;
-              background: #ff4726;
-              color: map-get($map: $color, $key: light);
-              border-radius: 30px;
-              padding: 5px;
-              display: flex;
-              justify-content: center;
-            }
-            .banner_title {
+            gap: 40px;
+            .banner_tag {
               display: flex;
               flex-direction: column;
-              gap: 6px;
-              h2 {
-                font-size: 4rem;
+              gap: 10px;
+              span {
+                width: 180px;
+                background: #ff4726;
+                color: map-get($map: $color, $key: light);
+                border-radius: 30px;
+                padding: 5px;
+                font-size: 1.4rem;
+                text-align: center;
               }
+              .banner_title {
+                display: flex;
+                flex-direction: column;
+                gap: 6px;
+                h2 {
+                  font-size: 3.6rem;
+                }
+                p {
+                  font-size: 1.6rem;
+                  color: map-get($map: $color, $key: dark-424242);
+                }
+              }
+            }
+            .banner_text1 {
               p {
                 font-size: 1.6rem;
                 color: map-get($map: $color, $key: dark-424242);
+                line-height: 150%;
               }
             }
           }
-          .banner_text1 {
+        }
+        .main_innerbanner2 {
+          width: 100%;
+          position: relative;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+          .banner2_text {
+            width: 100%;
+            margin-left: 20vw;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            span {
+              font-size: 2.6rem;
+            }
+            h2 {
+              font-size: 3.6rem;
+              margin-bottom: 10px;
+              b {
+                color: map-get($map: $color, $key: main-01);
+                font-weight: 800;
+              }
+            }
             p {
               font-size: 1.6rem;
-              color: map-get($map: $color, $key: dark-424242);
+              color: map-get($map: $color, $key: main-01);
+            }
+          }
+        }
+        .main_innerbanner3 {
+          width: 100%;
+          position: relative;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+          .banner3_text {
+            margin-left: 30vw;
+            width: 100%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            p {
+              font-size: 2rem;
+              b {
+                color: map-get($map: $color, $key: main-01);
+              }
+            }
+            h2 {
+              font-size: 5.5rem;
+              font-weight: 800;
               line-height: 150%;
             }
           }
         }
-      }
-      .main_innerbanner2 {
-        width: 100%;
-        position: relative;
-        img {
+        .main_innerbanner4 {
           width: 100%;
-          object-fit: cover;
-        }
-        .banner2_text {
-          padding: 0 50px;
-          width: 100%;
-          max-width: 1050px;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          display: flex;
-          flex-direction: column;
-          gap: 5px;
-          span {
-            font-size: 2.6rem;
+          position: relative;
+          color: map-get($map: $color, $key: light);
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
           }
-          h2 {
-            font-size: 4rem;
-            b {
-              color: map-get($map: $color, $key: main-01);
-            }
-          }
-          p {
-            font-size: 1.6rem;
-            color: map-get($map: $color, $key: main-01);
-          }
-        }
-      }
-      .main_innerbanner3 {
-        width: 100%;
-        position: relative;
-        img {
-          width: 100%;
-          object-fit: cover;
-        }
-        .banner3_text {
-          width: 100%;
-          max-width: 1050px;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          p {
-            font-size: 2rem;
-            b {
-              color: map-get($map: $color, $key: main-01);
-            }
-          }
-          h2 {
-            font-size: 5rem;
-          }
-        }
-      }
-      .main_innerbanner4 {
-        width: 100%;
-        position: relative;
-        color: map-get($map: $color, $key: light);
-        img {
-          width: 100%;
-          object-fit: cover;
-        }
-        .banner4_text {
-          width: 100%;
-          max-width: 1050px;
-          display: flex;
-          flex-direction: column;
-          position: absolute;
-          top: 55%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          gap: 5px;
-          p {
-            font-size: 1.4rem;
-            font-weight: lighter;
-          }
-          span {
-            font-size: 3rem;
-          }
-          h2 {
-            font-size: 4rem;
-            b {
-              // background-image: linear-gradient(
-              //   90deg,
-              //   rgba(151, 210, 118, 1) 0%,
-              //   rgba(110, 171, 77, 1) 100%
-              // );
-              color: rgba(110, 171, 77, 1);
-            }
-          }
-          .banner_time {
-            margin-top: 10px;
-            width: 16%;
+          .banner4_text {
+            width: 100%;
             display: flex;
-            justify-content: center;
-            font-size: 2rem;
-            background: map-get($map: $color, $key: dark);
-            border-radius: 20px;
-            padding: 10px;
+            flex-direction: column;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin-left: 20vw;
+            p {
+              font-size: 1.4rem;
+              font-weight: lighter;
+              line-height: 300%;
+            }
+            span {
+              font-size: 3rem;
+            }
+            h2 {
+              font-size: 3.6rem;
+              b {
+                font-weight: 700;
+                color: #ffb545;
+              }
+            }
+            .banner_time {
+              margin-top: 10px;
+              width: 160px;
+              display: flex;
+              justify-content: center;
+              font-size: 1.6rem;
+              background: map-get($map: $color, $key: dark);
+              border-radius: 20px;
+              padding: 8px;
+            }
+            .banner4_img {
+              width: 80px;
+              position: absolute;
+              top: 10px;
+              left: calc(8vw + 70px);
+              overflow: hidden;
+              img {
+                object-fit: cover;
+              }
+            }
           }
         }
       }
@@ -212,6 +229,7 @@ main {
       h1 {
         font-size: 2.6rem;
       }
+
       .main_it {
         width: 100%;
         display: grid;
@@ -258,7 +276,6 @@ main {
               -webkit-box-orient: vertical;
               overflow: hidden;
               text-overflow: ellipsis;
-              // font-size: 1.8rem;
               cursor: pointer;
             }
             .main_shopping,
@@ -322,7 +339,7 @@ main {
     height: auto;
     display: flex;
     justify-content: center;
-    margin-top: 120px;
+    margin-top: 100px;
     .main_inner {
       width: 100%;
       max-width: 1050px;
@@ -346,6 +363,7 @@ main {
           height: 10px;
         }
       }
+
       .main_it {
         width: 100%;
         display: grid;
@@ -417,6 +435,7 @@ main {
                     color: map-get($map: $color, $key: main-01);
                     b {
                       font-size: 3.6rem;
+                      font-weight: 800;
                     }
                   }
                 }
@@ -451,6 +470,7 @@ main {
       }
     }
   }
+
   #main_con3 {
     width: 100%;
     height: 444px;
@@ -511,19 +531,20 @@ main {
           display: flex !important;
           justify-content: center;
           align-items: center;
+          position: absolute;
+          top: 45%;
+          &.slick-prev{
+            left: -245px;
+          }
+          &.slick-next{
+            left: -180px;
+          }
 
           &:before {
             color: map-get($map: $color, $key: main-01);
-            font-size: 20px;
+            font-size: 3rem;
             opacity: 1;
           }
-        }
-
-        .slick-prev {
-          left: -40px;
-        }
-        .slick-next {
-          right: -40px;
         }
 
         .main_item {
@@ -544,11 +565,13 @@ main {
             filter: brightness(70%);
           }
           .recipe_info {
+            width: 224px;
             color: map-get($map: $color, $key: light);
             display: flex;
             flex-direction: column;
             gap: 120px;
             position: absolute;
+            padding: 10px;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
@@ -582,7 +605,7 @@ main {
               flex-direction: column;
               gap: 10px;
               .recipe_line {
-                width: 204px;
+                width: 100%;
                 height: 1px;
                 background-color: map-get($map: $color, $key: light);
               }
@@ -595,6 +618,7 @@ main {
       }
     }
   }
+
   #main_con4 {
     width: 100%;
     height: auto;
@@ -624,9 +648,10 @@ main {
           background: map-get($map: $color, $key: main-01);
           font-size: 1.6rem;
           border-radius: 10px;
-          padding: 10px 15px;
+          padding: 8px 15px;
         }
       }
+
       .main_it {
         width: 100%;
         display: grid;
@@ -694,6 +719,7 @@ main {
                     color: map-get($map: $color, $key: main-01);
                     b {
                       font-size: 3.6rem;
+                      font-weight: 800;
                     }
                   }
                 }
