--- a/styles/res_header.css
+++ b/styles/res_header.css
@@ -113,6 +113,9 @@
   header .header_inner nav {
     display: flex;
   }
+  header .header_inner nav .gnb {
+    pointer-events: auto;
+  }
   header .header_inner .trigger {
     display: flex;
   }
